Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Caiwu/print_jixiao.html
+++ b/Myerp/Tpl/Caiwu/print_jixiao.html
@@ -162,7 +162,7 @@
                   <td scope="row" align="left" valign="top"><{$v['type']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['chengrenshu'])</php>/<php> echo number_format($v['ertongshu'])</php>/<php> echo number_format($v['lingdui_num'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['jiage'])</php></td>
-                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}>%</td>
+                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
                   <td scope="row" align="left" valign="top">2元/人</td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
@@ -214,7 +214,7 @@
                   <td scope="row" align="left" valign="top"><{$v['type']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['chengrenshu'])</php>/<php> echo number_format($v['ertongshu'])</php>/<php> echo number_format($v['lingdui_num'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['jiage'])</php></td>
-                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}>%</td>
+                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
                   <td scope="row" align="left" valign="top">2元/人</td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
