--- a/Myerp/Tpl/Chanpin/shenhe.html
+++ b/Myerp/Tpl/Chanpin/shenhe.html
@@ -235,7 +235,7 @@
                   <td scope="row" align="left" valign="top"><{$v['chanpinID']}></td>
                   <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}>/<{$v['ertongshu']}>/<{$v['lingdui_num']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>:<{$v['ticheng']['description']}>%</td>
+                  <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>:<{$v['ticheng']['description']}></td>
                   <td scope="row" align="left" valign="top"><{$v['owner']}>/<{$v['bumen_copy']}></td>
                   <td scope="row" align="left" valign="top"><{$v['type']}></td>
                   <td scope="row" align="left" valign="top"><{$v['status']}></td>
