--- a/Myerp/Tpl/Qianzheng/baoming.html
+++ b/Myerp/Tpl/Qianzheng/baoming.html
@@ -154,7 +154,7 @@ function ajaxalert(title){
           <td align="left" style="height: 32px"> 提成类型：</td>
           <td align="left" style="height: 32px"><select name="tichengID" id="tichengID">
           		<php>foreach($ticheng as $tiv){</php>
-                <option value="<{$tiv['systemID']}>"><{$tiv['title']}>:<{$tiv['description']}>%</option>
+                <option value="<{$tiv['systemID']}>"><{$tiv['title']}>:<{$tiv['description']}></option>
                 <php>}</php>
             </select>（提成依据）</td>
             <td align="left" style="height: 27px; width: 156px;">收客人及所属部门：</td>
