--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -990,7 +990,7 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <tr height="20">
           <th scope="col" nowrap="nowrap"> 序号</th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 标题 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 提成百分比（例如提成5%即填5） </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 提成 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作 </div></th>
         </tr>
         
