--- a/Myerp/Tpl/Xiaoshou/baoming_qianzheng.html
+++ b/Myerp/Tpl/Xiaoshou/baoming_qianzheng.html
@@ -167,7 +167,7 @@ function ajaxalert(title){
           <td align="left" style="height: 32px"> 提成类型：</td>
           <td align="left" style="height: 32px"><select name="tichengID" id="tichengID">
           		<php>foreach($ticheng as $tiv){</php>
-                <option value="<{$tiv['systemID']}>"><{$tiv['title']}>:<{$tiv['description']}>%</option>
+                <option value="<{$tiv['systemID']}>"><{$tiv['title']}>:<{$tiv['description']}></option>
                 <php>}</php>
             </select>（提成依据）</td>
             
