--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -170,9 +170,9 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
     <php>}</php>
     >
     <ul>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">收支管理</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报账管理</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">提成管理</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">收支项审核</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报账单审核</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">订单审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/团费确认">团费确认</a> </li>
       <li class="subTabMore"> <a href="<{:SITE_INDEX}>Caiwu/tuansearch">组团地接产品>></a>
         <ul class="cssmenu">
