--- a/Myerp/Tpl/Index/search_jixiaotongji.html
+++ b/Myerp/Tpl/Index/search_jixiaotongji.html
@@ -27,7 +27,7 @@
                       <tbody>
                         <tr>
                           <td scope="row" nowrap="nowrap"> 姓名 </td>
-                          <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
+                          <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>">(非模糊查找)</td>
                           <td scope="row" nowrap="nowrap"> 时间 </td>
                           <td nowrap="nowrap">
                           <input type="text" onfocus="WdatePicker()" class="start_time" value="<{$start_time}>">
