Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/B2CManage/kongguan.html
+++ b/Myerp/Tpl/B2CManage/kongguan.html
@@ -137,7 +137,7 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		window.location = SITE_INDEX+'Chanpin/kongguan'+str;
+		window.location = SITE_INDEX+'B2CManage/zituanlist/second_confirm/1'+str;
 		//window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
