Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -236,6 +236,11 @@ function quxiao_after(data,status){
 			</select>
             <input style="width:60px;" class="button" type="button" value=" 修改 " onClick="checktable()">
           </td>
+          <td align="left" style="height: 32px"> 团队提成：</td>
+          <td align="left" style="height: 32px">
+          	<input type="text" name="tuandui_ticheng" id="tuandui_ticheng" value="<{$dingdan['tuandui_ticheng']}>"/>(直接输入金额)
+            <input style="width:60px;" class="button" type="button" value=" 修改 " onClick="checktable()">
+          </td>
         </tr>
         
         <tr>
@@ -256,6 +261,9 @@ function quxiao_after(data,status){
                 <php>}</php>
 			</select>
             <input style="width:60px;" class="button" type="button" value=" 修改 " onClick="checktable()">
+          </td>
+          <td align="left" style="height: 32px"></td>
+          <td align="left" style="height: 32px">
           </td>
         </tr>
         
