--- a/Myerp/Tpl/Caiwu/tongji_jixiao.html
+++ b/Myerp/Tpl/Caiwu/tongji_jixiao.html
@@ -36,6 +36,7 @@
                   <th scope="col" nowrap="nowrap"><div> 截止时间 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 参团人数：成人/儿童/全部 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 收客提成（元） </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 团队提成（元） </div></th>
                   <th scope="col" nowrap="nowrap"><div> 操作费（元） </div></th>
                 </tr>
                 <tr height="40" class="evenListRowS1">
@@ -43,6 +44,7 @@
                   <td scope="row" align="left" valign="top"><{$end_time}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['chengrenshu'])</php>/<php> echo number_format($tongji['ertongshu'])</php>/<php> echo number_format($tongji['zongrenshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['ticheng'])</php></td>
+                  <td scope="row" align="left" valign="top"><php> echo number_format($tongji['tuandui_ticheng'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['caozuofei'])</php></td>
                 </tr>
               </tbody>
@@ -77,6 +79,7 @@
 			<php> }</php>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 收客：成人/儿童/全部 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 收客提成（元） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团队提成（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作：成人/儿童/全部  </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作费（元）</div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:160px;"><div> 操作 </div></th>
@@ -90,6 +93,7 @@
 			<php> }</php>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_chengren'])</php>/<php> echo number_format($v['shouke_ertong'])</php>/<php> echo number_format($v['shouke_shu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
+                  <td scope="row" align="left" valign="top"><php> echo number_format($v['tuandui_ticheng'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_chengren'])</php>/<php> echo number_format($v['caozuo_ertong'])</php>/<php> echo number_format($v['caozuo_shu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
                   <td scope="row" align="left" valign="top">
@@ -109,6 +113,7 @@
 			<php> }</php>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 收客：成人/儿童/全部 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 收客提成（元） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团队提成（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作：成人/儿童/全部  </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作费（元）</div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:160px;"><div> 操作 </div></th>
@@ -122,6 +127,7 @@
 			<php> }</php>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_chengren'])</php>/<php> echo number_format($v['shouke_ertong'])</php>/<php> echo number_format($v['shouke_shu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
+                  <td scope="row" align="left" valign="top"><php> echo number_format($v['tuandui_ticheng'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_chengren'])</php>/<php> echo number_format($v['caozuo_ertong'])</php>/<php> echo number_format($v['caozuo_shu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
                   <td scope="row" align="left" valign="top">
@@ -163,6 +169,7 @@
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 售价（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 提成标准 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 提成（元） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团队提成（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作费（元） </div></th>
                 </tr>
                 <php> $i = -1; foreach($unitdata[0]['dingdan'] as $v){ $i++;</php>
@@ -176,6 +183,7 @@
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['jiage'])</php></td>
                   <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>:<{$v['ticheng']['description']}>元</td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
+                  <td scope="row" align="left" valign="top"><php> echo number_format($v['tuandui_ticheng'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
                 </tr>
                 <php> }</php>
@@ -213,6 +221,7 @@
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 售价（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 提成类型 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 收客提成（元） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团队提成（元） </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作费提成 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作费（元） </div></th>
                 </tr>
@@ -227,6 +236,7 @@
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['jiage'])</php></td>
                   <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['ticheng']['description']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['shouke_price'])</php></td>
+                  <td scope="row" align="left" valign="top"><php> echo number_format($v['tuandui_ticheng'])</php></td>
                   <td scope="row" align="left" valign="top">2元/人</td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['caozuo_price'])</php></td>
                 </tr>
