--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -463,7 +463,7 @@ jQuery().ready(function() {
         
         <tr height="30" class="evenListRowS1" id="itemlist<{$v['chanpinID']}>">
           <td scope="row" align="left" valign="top"><{$i}></td>
-          <td scope="row" align="left" valign="top"><input type="text" name="title" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check="^\S+$" warning="标题不能为空,且不能含有空格" ></td>
+          <td scope="row" align="left" valign="top"><input type="text" name="title" style="width:200px;" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check="^\S+$" warning="标题不能为空,且不能含有空格" ></td>
           <td scope="row" align="left" valign="top"><input type="text" name="value" style="width:80px;" id="value<{$v['chanpinID']}>" value="<{$v['value']}>" check="^\S+$" warning="金额不能为空,且不能含有空格" ></td>
           <td scope="row" align="left" valign="top"><select id="method<{$v['chanpinID']}>">
               <option value="<{$v['method']}>"><{$v['method']}></option>
@@ -561,7 +561,7 @@ jQuery().ready(function() {
         <tr height="30" class="evenListRowS1" id="itemlist<{$v['chanpinID']}>">
           <td scope="row" align="left" valign="top"><{$i}></td>
           <td scope="row" align="left" valign="top">
-          <input type="text" name="title" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check='^\S+$' warning="标题不能为空,且不能含有空格" >
+          <input type="text" name="title" style="width:200px;" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check='^\S+$' warning="标题不能为空,且不能含有空格" >
           <input type="hidden" id="expandID<{$v['chanpinID']}>" value="<{$v['expandID']}>">
           <input type="hidden" id="expandtype<{$v['chanpinID']}>" value="<{$v['expandtype']}>">
           </td>
@@ -656,7 +656,7 @@ jQuery().ready(function() {
         <tr height="30" class="evenListRowS1" id="itemlist<{$v['chanpinID']}>">
           <td scope="row" align="left" valign="top"><{$i}></td>
           <td scope="row" align="left" valign="top">
-          <input type="text" name="title" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check='^\S+$' warning="标题不能为空,且不能含有空格" >
+          <input type="text" name="title" style="width:200px;" id="title<{$v['chanpinID']}>" value="<{$v['title']}>" check='^\S+$' warning="标题不能为空,且不能含有空格" >
           <input type="hidden" id="expandID<{$v['chanpinID']}>" value="<{$v['expandID']}>">
           <input type="hidden" id="expandtype<{$v['chanpinID']}>" value="<{$v['expandtype']}>">
           </td>
