Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -84,7 +84,7 @@ function dologin(){
 }
 function doComplete(data,status){
 	if(status == 1){
-			window.location.href='<{:SITE_INDEX}>Message/index/datatype/公告';
+			window.location.href='<{:SITE_INDEX}>Index';
 	}
 }
 </script>
