Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/VIP/bankfileupload.html
+++ b/Myerp/Tpl/VIP/bankfileupload.html
@@ -20,7 +20,8 @@ function dopostUpload(){
         <div id="navtab_1" class="leftList">
           <h3><span>快捷方式</span></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="#">&nbsp;<span>|---消费记录上传</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>VIP/bankFileUpload">&nbsp;<span>|---消费记录上传</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>VIP/uploadHistory">&nbsp;<span>|---上传记录查询</span></a> </li>
           </ul>
         </div>
   </div>
