Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -239,6 +239,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <php>if($is_yinghang_yewu){</php>
       <li> <a href="<{:SITE_INDEX}>VIP/bankFileUpload">消费记录上传</a> </li>
       <li> <a href="<{:SITE_INDEX}>VIP/uploadHistory">上传记录查询</a> </li>
+      <li> <a href="<{:SITE_INDEX}>VIP/memberFileUpload">会员清单上传</a> </li>
       <php>}if($is_qiantai){</php>
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/公告">公告</a> </li>
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/排团表">排团表</a> </li>
