--- a/Myerp/Tpl/VIP/uploadHistory.html
+++ b/Myerp/Tpl/VIP/uploadHistory.html
@@ -5,15 +5,8 @@
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 <div id="main">
-  <div id="leftColumn" style="margin-top:0px; width:150px;">
-        <div id="navtab_1" class="leftList">
-          <h3><span>快捷方式</span></h3>
-          <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>VIP/bankFileUpload">&nbsp;<span>|---消费记录上传</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>VIP/uploadHistory">&nbsp;<span>|---上传记录查询</span></a> </li>
-          </ul>
-        </div>
-  </div>
+
+  <tp:includeCA file="VIP:left:'left'" />
   
   <div id="content" style="margin-left:180px;">
   
@@ -43,7 +36,8 @@
                 
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-                  <th scope="col" nowrap="nowrap" style="text-align:center; width:70%; min-width:500px;"><div> 文件名 </div></th>
+                  <th scope="col" nowrap="nowrap" style="text-align:center; width:50%; min-width:500px;"><div> 文件名 </div></th>
+                  <th scope="col" nowrap="nowrap" style="text-align:center; width:20%; min-width:100px;"><div> 类型 </div></th>
                   <th scope="col" nowrap="nowrap" style="text-align:center; width:20%; min-width:100px;"><div> 时间 </div></th>
                 </tr>
                 
@@ -51,6 +45,7 @@
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="center" valign="top"><{$v['filename_upload']}></td>
+                  <td scope="row" align="center" valign="top"><{$v['file_type']}></td>
                   <td scope="row" align="center" valign="top"><php>echo date('Y-m-d H:i',$v['time'])</php></td>
                 </tr>
                 <php> }</php>
