Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/baomingnext.html
+++ b/Myerp/Tpl/Xiaoshou/baomingnext.html
@@ -184,7 +184,10 @@ function save(){
           <option value="通行证">通行证</option>
           </select>
           </td>
+<!--          
           <td align="left" style="height: 32px"><input name="zhengjianhaoma<{$i}>" type="text" check="^\S+$" warning="所有人员证件号码不能为空，且不能重复"></td>
+-->          
+          <td align="left" style="height: 32px"><input name="zhengjianhaoma<{$i}>" type="text" ></td>
           <td align="left" style="height: 32px"><input name="chushengriqi<{$i}>" type="text" class="Wdate" onfocus="WdatePicker()"></td>
           <td align="left" style="height: 32px"><input name="hujidi<{$i}>" type="text"></td>
           <td align="left" style="height: 32px"><input name="zhengjianyouxiaoqi<{$i}>" type="text" class="Wdate" onfocus="WdatePicker()"></td>
