Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/baoming.html
+++ b/Myerp/Tpl/Xiaoshou/baoming.html
@@ -192,7 +192,7 @@ function ajaxalert(title){
           <td align="left" style="height: 32px"><input name="telnum" type="text" id="telnum" onkeyup="this.value=this.value.replace(/[^0-9]/g, '')" check="^\S+$" warning="联系电话不能为空,且不能含有空格"></td>
         </tr>
         <tr>
-          <td align="left" style="height: 32px"> 包含领队数：</td>
+          <td align="left" style="height: 32px"> 领队数：</td>
           <td align="left" style="height: 32px"><input name="lingdui_num" type="text" id="lingdui_num" onkeyup="this.value=this.value.replace(/[^0-9]/g, '')" value="0"></td>
           <td align="left" style="height: 32px"> 订单状态：</td>
           <td align="left" style="height: 32px">
@@ -202,9 +202,9 @@ function ajaxalert(title){
             </select></td>
         </tr>
         <tr>
-          <td align="left" style="height: 32px"> 成人人数：</td>
+          <td align="left" style="height: 32px"> 客人数（成人）：</td>
           <td align="left" style="height: 32px"><input name="chengrenshu" type="text" maxlength="3" id="chengrenshu" onkeyup="this.value=this.value.replace(/[^0-9]/g, '')" value="0"></td>
-          <td align="left" style="height: 32px"> 儿童人数：</td>
+          <td align="left" style="height: 32px"> 客人数（儿童）：</td>
           <td align="left" style="height: 32px"><input name="ertongshu" type="text" maxlength="3" id="ertongshu" onkeyup="this.value=this.value.replace(/[^0-9]/g, '')" value="0"></td>
         </tr>
         <tr>
